<resources>
    <string name="app_name">SalleLibrary</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_up">Registrarse</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombreautor">Nombre del autor</string>
    <string name="descripcion">Descripcion del libro</string>
    <string name="titulo">Titulo del libro</string>
    <string name="welcome">Bienvenido</string>
    <string name="persona">Persona</string>
    <string name="textoabuscar">Texto a buscar en api</string>
    <string name="buscar">Buscar</string>
    <string name="title_activity_sesiones">Sesiones</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="insfav">Añadir en Favoritos</string>
    <string name="favoritos">Mostrar Favoritos</string>
    <string name="image">Imagen</string>
    <string name="quitarfav">Quitar Fav.</string>

</resources>
