<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alumne.sallelibrary.ApiBuscar">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textoabuscar"
        android:id="@+id/editbuscar"/>
    <Button
    android:id="@+id/botonbuscar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/editbuscar"
    android:text="@string/buscar"/>
    <Button
        android:id="@+id/mosfavos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botonbuscar"
        android:text="@string/favoritos"/>
    <com.example.alumne.componente.MyView
        android:layout_margin="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mosfavos"
        app:dateFormat="dd-MM-yyyy"/>
</RelativeLayout>
