<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alumne.sallelibrary.LibrosFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/welcome"
        android:textSize="22sp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/namep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/welcome"
        android:text="@string/persona"
        android:textSize="22sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favori"
        android:text="@string/favoritos"
        android:layout_below="@id/welcome"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/favori"
        android:id="@+id/list"></ListView>

</RelativeLayout>
